fixed a bug with chrome device manager that created overflow

--- a/scss/Welcome/welcomePage.css
+++ b/scss/Welcome/welcomePage.css
@@ -3,78 +3,32 @@
   padding: 0;
 }
 
-#logo {
-  height: 15vh;
-}
-
-#header {
-  background-color: orangered;
-  display: grid;
-  height: 15vh;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-auto-flow: column;
-  text-align: center;
-}
-#header > p {
-  display: grid;
-  align-self: center;
-  font-family: cursive;
-  font-size: 18pt;
-}
-#header > p > span {
-  padding: 5px;
-}
-
 html {
   background-color: moccasin;
 }
 
+#logo {
+  height: 10vh;
+}
+
+header {
+  display: grid;
+  background-color: orangered;
+  grid-template-columns: 1fr 1fr;
+  height: 10vh;
+}
+
 nav {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-  grid-auto-flow: column;
+  grid-template-columns: 1fr 1fr;
   padding: 20px 5px 20px 10px;
   font-size: 19pt;
-  align-items: center;
 }
 nav > #find {
-  background-color: rgb(252, 109, 6);
+  background-color: orangered;
   border: 2px solid black;
-  width: 36vw;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
 }
 nav > #menu {
-  background-color: rgb(252, 109, 6);
+  background-color: orangered;
   border: 2px solid black;
-  width: 36vw;
-  padding: 20px;
-  text-align: center;
-  text-decoration: none;
-}
-
-#oven {
-  display: grid;
-  width: 100vw;
-  padding-bottom: 10px;
-}
-
-article > h1 {
-  text-align: center;
-  padding: 10px;
-}
-article > p {
-  text-align: left;
-  padding: 5px;
-}
-
-footer {
-  background-color: black;
-  color: white;
-  padding-top: 10px;
-  font-size: 10pt;
-  height: 3vh;
-  text-align: left;
-  text-justify: center;
 }/*# sourceMappingURL=welcomePage.css.map */
